src/objects/BK_Account__c/BK_Account__c.object-meta.xml
<CustomObject>
    <description>BendixKing SubAccounts</description>
    <label>BK Account</label>
    <nameField>
        <displayFormat>BK-{0}</displayFormat>
        <label>BK Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BK Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>