src/objects/BK_Account__c/fields/BK_Aviall_REV_Prior_YR__c.field-meta.xml
<CustomField>
    <fullName>BK_Aviall_REV_Prior_YR__c</fullName>
    <label>REV_Prior_YR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>