src/objects/BK_Account__c/fields/BK_Dealer_Loc_Address__c.field-meta.xml
<CustomField>
    <fullName>BK_Dealer_Loc_Address__c</fullName>
    <description>for use with the dealer locator and matchup to addresses from Aero</description>
    <label>BK Dealer Loc Address</label>
    <type>TextArea</type>
</CustomField>