src/objects/BK_Account__c/fields/BK_Owner_email__c.field-meta.xml
<CustomField>
    <fullName>BK_Owner_email__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BK_Owner_email</label>
    <type>Text</type>
</CustomField>