src/objects/BK_Account__c/fields/BK_SFDC_ID_Cross_Ref__c.field-meta.xml
<CustomField>
    <fullName>BK_SFDC_ID_Cross_Ref__c</fullName>
    <description>Used to match up for now to get BK accounts added and updated</description>
    <externalId>true</externalId>
    <label>BK_SFDC_ID_Cross_Ref</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>