src/objects/BK_Account__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Out for signature</fullName>
            </value>
            <value>
                <fullName>Waiting for Counter signature</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>