src/objects/BK_Account__c/fields/GTA__c.field-meta.xml
<CustomField>
    <fullName>GTA__c</fullName>
    <label>GTA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>