src/objects/BK_Account__c/fields/Olathe_Acct_4__c.field-meta.xml
<CustomField>
    <fullName>Olathe_Acct_4__c</fullName>
    <label>Olathe Acct#4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>