src/objects/BK_Account__c/listViews/BendixKing_Distributors.listView-meta.xml
<ListView>
    <fullName>BendixKing_Distributors</fullName>
    <columns>NAME</columns>
    <columns>AKA_or_DBA__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>BK_Account_Type__c</columns>
    <columns>Aviall_REV_YTD__c</columns>
    <columns>BK_Aviall_REV_Prior_YR__c</columns>
    <columns>Other_YTD_Rev__c</columns>
    <columns>BK_Dealer_Locator_c__c</columns>
    <columns>Repair_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BK_Account_Type__c</field>
        <operation>equals</operation>
        <value>Distributor</value>
    </filters>
    <label>BendixKing Distributors</label>
    <language>en_US</language>
</ListView>