src/objects/BK_Account__c/listViews/BK_BY_REGION.listView-meta.xml
<ListView>
    <fullName>BK_BY_REGION</fullName>
    <columns>NAME</columns>
    <columns>BK_Account_Owner_Alias__c</columns>
    <columns>AKA_or_DBA__c</columns>
    <columns>Dealer_Loc_Country__c</columns>
    <columns>Dealer_Loc_Country_Code__c</columns>
    <columns>Region__c</columns>
    <columns>Account__c</columns>
    <columns>BK_Revenue_Segment__c</columns>
    <filterScope>Everything</filterScope>
    <label>BK BY REGION</label>
    <language>en_US</language>
    <sharedTo>
        <group>BendixKing_Finance</group>
        <group>BendixKing_Sales</group>
    </sharedTo>
</ListView>