src/objects/BK_Account__c/listViews/BK_Customer_BK_Accounts.listView-meta.xml
<ListView>
    <fullName>BK_Customer_BK_Accounts</fullName>
    <columns>NAME</columns>
    <columns>BK_Account_Owner_Alias__c</columns>
    <columns>Account__c</columns>
    <columns>AKA_or_DBA__c</columns>
    <columns>BK_Dealer_Location_Address__c</columns>
    <columns>Dealer_Loc_Country__c</columns>
    <columns>Region__c</columns>
    <columns>Dealer_Loc_State__c</columns>
    <columns>Probable_Supplier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>(BK CUSTOMER)</value>
    </filters>
    <label>BK Customer BK Accounts</label>
    <language>en_US</language>
    <sharedTo>
        <group>BendixKing_Marketing</group>
        <group>BendixKing_Sales</group>
    </sharedTo>
</ListView>