src/objects/BK_Account__c/listViews/BK_Dealer_Avionics_BK_Customer.listView-meta.xml
<ListView>
    <fullName>BK_Dealer_Avionics_BK_Customer</fullName>
    <columns>NAME</columns>
    <columns>AKA_or_DBA__c</columns>
    <columns>Account__c</columns>
    <columns>BK_Dealer_Location_Address__c</columns>
    <columns>Dealer_Loc_City__c</columns>
    <columns>Dealer_Loc_State__c</columns>
    <columns>Dealer_Loc_Country_Code__c</columns>
    <columns>Dealer_Phone__c</columns>
    <columns>Dealer_Website__c</columns>
    <columns>HIPI__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Primary_Account_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BK_Account_Type__c</field>
        <operation>equals</operation>
        <value>Dealer - Avionics</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>(BK CUSTOMER)</value>
    </filters>
    <filters>
        <field>Dealer_Loc_Country__c</field>
        <operation>notContain</operation>
        <value>US</value>
    </filters>
    <label>BK Dealer Avionics - (BK Customer)</label>
</ListView>