src/objects/BK_Account__c/listViews/By_State.listView-meta.xml
<ListView>
    <fullName>By_State</fullName>
    <columns>NAME</columns>
    <columns>AKA_or_DBA__c</columns>
    <columns>BK_Account_Owner_Alias__c</columns>
    <columns>BK_ICAO_Code__c</columns>
    <columns>Contracts_Manager__c</columns>
    <columns>Contract_Manager_Email__c</columns>
    <columns>Dealer_Location_Address__c</columns>
    <columns>Dealer_Phone__c</columns>
    <columns>Dealer_Website__c</columns>
    <columns>Aviall_REV_YTD__c</columns>
    <columns>Dealer_Loc_State__c</columns>
    <columns>Account_State_Code__c</columns>
    <columns>Account_Country_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BK_Account_Type__c</field>
        <operation>equals</operation>
        <value>Dealer - Avionics</value>
    </filters>
    <filters>
        <field>Account_State_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>By State</label>
    <language>en_US</language>
</ListView>