src/objects/BK_Account__c/listViews/Dealer_Avionics.listView-meta.xml
<ListView>
    <fullName>Dealer_Avionics</fullName>
    <columns>NAME</columns>
    <columns>AKA_or_DBA__c</columns>
    <columns>Dealer_Phone__c</columns>
    <columns>BK_Account_Owner_Alias__c</columns>
    <columns>Account__c</columns>
    <columns>Account_Country_Code__c</columns>
    <columns>Account_State_Code__c</columns>
    <columns>Dealer_Loc_State__c</columns>
    <columns>Dealer_Loc_Country_Code__c</columns>
    <columns>HIPI__c</columns>
    <columns>BK_Account_Type__c</columns>
    <columns>BK_Dealer_Locator_c__c</columns>
    <columns>BK_ICAO_Code__c</columns>
    <columns>Repair_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BK_Account_Type__c</field>
        <operation>equals</operation>
        <value>Dealer - Avionics</value>
    </filters>
    <filters>
        <field>BK_Dealer_Locator_c__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Dealer - Avionics</label>
    <language>en_US</language>
</ListView>