src/objects/BK_Account__c/listViews/Dealer_Avionics_by_ASM.listView-meta.xml
<ListView>
    <fullName>Dealer_Avionics_by_ASM</fullName>
    <columns>NAME</columns>
    <columns>AKA_or_DBA__c</columns>
    <columns>Contracts_Manager__c</columns>
    <columns>Contract_Manager_Email__c</columns>
    <columns>BK_Account_Owner_Alias__c</columns>
    <columns>BK_Owner_email__c</columns>
    <columns>Dealer_Loc_State__c</columns>
    <columns>Dealer_Loc_Country_Code__c</columns>
    <columns>BK_Account_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Dealer - Avionics by ASM</label>
</ListView>