src/objects/BK_Account__c/listViews/My_BK_Accounts.listView-meta.xml
<ListView>
    <fullName>My_BK_Accounts</fullName>
    <columns>NAME</columns>
    <columns>BK_Account_Owner_Alias__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>AKA_or_DBA__c</columns>
    <columns>Account__c</columns>
    <columns>BK_Account_Type__c</columns>
    <columns>BK_ICAO_Code__c</columns>
    <filterScope>Mine</filterScope>
    <label>My BK Accounts</label>
    <language>en_US</language>
</ListView>