src/objects/BK_Account__c/listViews/TruTrak_Dealers.listView-meta.xml
<ListView>
    <fullName>TruTrak_Dealers</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>AKA_or_DBA__c</columns>
    <columns>BK_Account_Owner_Alias__c</columns>
    <columns>BK_Account_Type__c</columns>
    <columns>Experimental_Dealer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BK_Account_Type__c</field>
        <operation>equals</operation>
        <value>Dealer - TruTrak</value>
    </filters>
    <label>TruTrak Dealers</label>
    <language>en_US</language>
</ListView>